--- a/TinnRcom/ChangeLog
+++ b/TinnRcom/ChangeLog
@@ -1,2 +1,8 @@
+2014-01-015 vs. 1.0-15 - José Cláudio Faria  <joseclaudio.faria@gmail.com>
+	* Updated primitive detection of trArgs function
+
+2013-11-01 vs. 1.0-14 - José Cláudio Faria  <joseclaudio.faria@gmail.com>
+	* Fisrt version released
+
 2013-09-24 vs. 1.0-13 - José Cláudio Faria  <joseclaudio.faria@gmail.com>
 	* Fisrt version restricted released (to testers only)
